VISTA-2343 - menu links blocked by transparent image in IE7 - fixed by setting z-index of parent container

--- a/vista-pmsite/vista-pmsite-server/src/main/resources/templates/skin0/main.css
+++ b/vista-pmsite/vista-pmsite-server/src/main/resources/templates/skin0/main.css
@@ -95,6 +95,7 @@ select {
 	margin: 0 auto;
 	position: relative;
 	width: 960px;
+	z-index:100;
 }
 
 #siteTitle {
